--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,7 +93,7 @@ body {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
-  margin-bottom: 10px;
+  margin: 30px;
 }
 
 /* Style the links inside the navigation bar */
@@ -146,6 +146,7 @@ body {
   height: 93rem;
   padding: 40px;
   margin: 60px 50px;
+  background-color: #34343470;
 }
 .content-box {
   height: 350px;
@@ -300,6 +301,7 @@ button a:hover {
   padding: 90PX 0;
   margin: 40px 20PX;
   border: 2px solid #a18400;
+  background-color: #34343470;
 }
 .modal-heading {
   color: white;
@@ -309,8 +311,9 @@ button a:hover {
 }
 .border-container {
   border: 1px solid #d39e00;
-  padding: 40px 0 !important;
+  padding: 40px 30px !important;
   margin: 65px;
+  background-color: #34343470;
 }
 
 
